--- a/src/app/components/list-component/list-component.component.html
+++ b/src/app/components/list-component/list-component.component.html
@@ -10,8 +10,8 @@
     </button>
     -->
 
-  <button type="button" class="btn btn-add" (click)="addModule = !addModule" *ngIf="!addModule">
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+  <button type="button" class="btn btn-add" (click)="addNew()" *ngIf="!addModule">
+        <i class="fa fa-book" aria-hidden="true"></i>
       </button>
 
 
