--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <div>
   <div class="container-fullwidth">
-{{appService.title}}
-{{title}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <img class="navbar-brand text-primary logo" src="/app/assets/images/regent-logo.svg"/>
+      <img class="navbar-brand text-primary logo" src="/app/assets/images/regent-logo.svg" />
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -16,7 +15,8 @@
             <a href="#" class="nav-link text-primary" routerLink="/model">Models</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-primary" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-primary" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
              Users
            </a>
             <div class="dropdown-menu bg-dark border-0" aria-labelledby="navbarDropdownMenuLink">
@@ -32,13 +32,14 @@
           <li class="nav-item">
             <a class="nav-link text-primary" href="/dynamicel">DynamicEl</a>
           </li>
-          
+
 
           <li class="nav-item">
             <a class="nav-link text-primary" href="/systemmodels">SystemModels</a>
           </li>
           <li class="nav-item dropdown">
-            <a href="http://example.com" class="nav-link dropdown-toggle text-primary" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a href="http://example.com" class="nav-link dropdown-toggle text-primary" id="navbarDropdownMenuLink2" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Generator
             </a>
             <div class="dropdown-menu bg-dark border-0" aria-labelledby="navbarDropdownMenuLink2">
