--- a/src/app/components/system-models/system-models.component.html
+++ b/src/app/components/system-models/system-models.component.html
@@ -54,7 +54,7 @@
 
         <div class="row">
           <app-list-draggable #bag1 [selected]="selected" selectedProp="module" title="Modules" bag="bag1" [listItems]="application.modules">
-            <!-- <app-list-component bag="bag1" [listItems]="copyModules"></app-list-component> -->
+            <app-list-component bag="bag1" [listItems]="copyModules"></app-list-component>
           </app-list-draggable>
 
           <ng-container *ngIf="application.modules[selected.module].entities">
@@ -86,87 +86,13 @@
             </ng-container>
           </ng-container>
 
-          <!-- 
-              
-            -->
-
-          <!-- 
-          <div class="col col-item">
-            <h3>Modules</h3>
-            <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
-              <li *ngFor='let module of application.modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
-                [ngClass]="{'active': selected.module == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
-                <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
-              </li>
-            </ul>
-          </div>
-
-
-
-           <div class="col col-item">
-            <h3>Modules</h3>
-            <ul class=" list-group module-group" [dragula]='"bag1"' [dragulaModel]='modules'>
-              <li *ngFor='let module of modules; let i = index' class="list-group-item list-group-item-action list-group-item-dark module-item"
-                [ngClass]="{'active': selected.module == i}" (click)="selectModule(i)" (dblclick)="myFunction(i)">
-                <i class="fa fa-archive" aria-hidden="true"></i> {{module.name}}
-              </li>
-            </ul>
-
-            <app-list-component bag="bag1" [listItems]="copyModules"></app-list-component>
-
-          </div> 
-
-
-
-          <div class="col col-item" >
-            <h3>Entities</h3>
-            <ul class=" list-group entity-group" [dragula]='"bag2"' [dragulaModel]='modules[selected.module].entities'>
-              <li *ngFor='let entity of modules[selected.module].entities; let i = index' class="list-group-item list-group-item-action entity-item"
-                [ngClass]="{'active': selected.entity == i}" (click)="selectEntity(i)">
-                <i class="fa fa-folder" aria-hidden="true"></i> {{entity.name}}
-              </li>
-            </ul>
-            <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
-          </div> 
-       
-          
-          <div class="col col-item" *ngIf="modules[selected.module].entities[selected.entity]">
-            <h3>Fields</h3>
-            <ul class=" list-group field-group" [dragula]='"bag3"' [dragulaModel]='modules[selected.module].entities[selected.entity].fields'>
-              <li *ngFor='let field of modules[selected.module].entities[selected.entity].fields; let i = index' class="list-group-item list-group-item-action field-item"
-              [ngClass]="{'active': selected.field == i}" (click)="selectField(i)">
-              
-              <i class="fa fa-sticky-note" aria-hidden="true"></i>
-              
-              <span class="badge badge-right icon-field" [ngClass]="'type-' + field.type">
-                <i class="fa" aria-hidden="true" [ngClass]="type(field.type).icon"></i> {{field.type}}
-              </span> {{field.name}}
-            </li>
-          </ul>
-          <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
-        </div>
-        
-        <div class="col col-item" *ngIf="modules[selected.module].entities[selected.entity].fields[selected.field]">
-          <h3>Properties</h3>
-          <ul class=" list-group property-group" [dragula]='"bag4"' [dragulaModel]='modules[selected.module].entities[selected.entity].fields[selected.field].properties'>
-            <li *ngFor='let property of modules[selected.module].entities[selected.entity].fields[selected.field].properties; let i = index'
-            class="list-group-item list-group-item-action property-item">
-            {{property}}
-          </li>
-        </ul>
-        <button type="button" class="btn btn-center"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
-        
-        
-        
-      </div>
-    -->
-
         </div>
 
 
       </tab>
       <tab heading="Form" customClass="tab-dark">Static content 1</tab>
       <tab heading="Screen" customClass="tab-dark">Static content 2</tab>
+      <tab heading="Wizard" customClass="tab-dark">Static content 2</tab>
       <tab heading="Menu" customClass="tab-dark">Static content 2</tab>
       <tab heading="Theme" customClass="tab-dark">Static content 2</tab>
 
@@ -180,25 +106,11 @@
     </tabset>
 
 
-
   </main>
-  <aside [ngClass]="{'active': aside}">
 
-    xxx
-    <!-- 
+  <app-aside [ngClass]="{'active': true}" *ngIf="applicationService._editInstance"></app-aside>
 
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input class="form-control form-control-sm" type="text" [(ngModel)]="modules[selected.module].name">
-    </div>
-
-    <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-secondary">Left</button>
-      <button type="button" class="btn btn-warning">Clear Contents</button>
-      <button type="button" class="btn btn-danger">Remove</button>
-    </div> -->
-
-  </aside>
+ 
 </section>
 
 
@@ -210,7 +122,7 @@
 
 
 
-  <ng-template #popTemplate1>
+  <ng-template #popTemplate1>Password
       <accordion [closeOthers]="true">
           <accordion-group heading="Header" class="card">
             This content is straight in the template.
@@ -255,12 +167,10 @@
 
 </div>
 
+
+
 -->
 
-
-
-<!-- 
-<pre>{{modules | json}}</pre> -->
-<pre>
-{{application | json}}
-</pre>
+  <pre>
+    {{application | json}}
+  </pre>
